# whatchadoing

./: CMakeLists.txt  README.md
whatcha-doin/: CMakeLists.txt  WhatchaDoin.cpp
